--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-animated-number": "^0.4.4",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
